force-app/main/default/objects/Sales_Presentation_Summary__c/Sales_Presentation_Summary__c.object-meta.xml
<CustomObject>
    <description>This object stores the Sales Presentation summary and analytics. The Sales Presentation Summary is attached to an Opportunity object and reflects the results of the sales presentation associated with that Opportunity.</description>
    <label>Sales Presentation Summary</label>
    <nameField>
        <label>Sales Presentation Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Presentation Summaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>