force-app/main/default/objects/Sales_Presentation_Summary__c/fields/Additional_Transactions__c.field-meta.xml
<CustomField>
    <fullName>Additional_Transactions__c</fullName>
    <label>Additional Transactions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>