force-app/main/default/objects/Sales_Presentation_Summary__c/fields/AM_and_CSR_Intro_duration__c.field-meta.xml
<CustomField>
    <fullName>AM_and_CSR_Intro_duration__c</fullName>
    <label>AM and CSR Intro_duration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>