force-app/main/default/objects/Sales_Presentation_Summary__c/fields/AMTs_1__c.field-meta.xml
<CustomField>
    <fullName>AMTs_1__c</fullName>
    <label>AMTs (1)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stay-In-Touch Managed Social Media</fullName>
            </value>
            <value>
                <fullName>E-Newsletter Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>