force-app/main/default/objects/Sales_Presentation_Summary__c/fields/confirm2_Missed__c.field-meta.xml
<CustomField>
    <fullName>confirm2_Missed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interactive Confirm_Missed</label>
    <type>Checkbox</type>
</CustomField>