force-app/main/default/objects/Sales_Presentation_Summary__c/fields/confirm_duration__c.field-meta.xml
<CustomField>
    <fullName>confirm_duration__c</fullName>
    <label>confirm_duration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>