force-app/main/default/objects/Sales_Presentation_Summary__c/fields/Date_Contact_List__c.field-meta.xml
<CustomField>
    <fullName>Date_Contact_List__c</fullName>
    <label>Date Contact List</label>
    <type>Date</type>
</CustomField>