force-app/main/default/objects/Sales_Presentation_Summary__c/fields/differentiate_Missed__c.field-meta.xml
<CustomField>
    <fullName>differentiate_Missed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>How do you differentiate_Missed</label>
    <type>Checkbox</type>
</CustomField>