force-app/main/default/objects/Sales_Presentation_Summary__c/fields/gap1_Missed__c.field-meta.xml
<CustomField>
    <fullName>gap1_Missed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GAP Analysis 1_Missed</label>
    <type>Checkbox</type>
</CustomField>