force-app/main/default/objects/Sales_Presentation_Summary__c/fields/gap2_Missed__c.field-meta.xml
<CustomField>
    <fullName>gap2_Missed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GAP Analysis 2_Missed</label>
    <type>Checkbox</type>
</CustomField>