force-app/main/default/objects/Sales_Presentation_Summary__c/fields/GAP_Analysis_1_duration__c.field-meta.xml
<CustomField>
    <fullName>GAP_Analysis_1_duration__c</fullName>
    <label>GAP Analysis 1_duration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>