force-app/main/default/objects/Sales_Presentation_Summary__c/fields/GAP_Client_Testimonials__c.field-meta.xml
<CustomField>
    <fullName>GAP_Client_Testimonials__c</fullName>
    <label>GAP: Client Testimonials</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Marketing_GAP</valueSetName>
    </valueSet>
</CustomField>