force-app/main/default/objects/Sales_Presentation_Summary__c/fields/GAP_current_provider_improvements__c.field-meta.xml
<CustomField>
    <fullName>GAP_current_provider_improvements__c</fullName>
    <label>GAP: current provider improvements?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>