force-app/main/default/objects/Sales_Presentation_Summary__c/fields/GAP_Digital_Ads_Pay_Per_Click__c.field-meta.xml
<CustomField>
    <fullName>GAP_Digital_Ads_Pay_Per_Click__c</fullName>
    <label>GAP: Digital Ads / Pay-Per-Click</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Marketing_GAP</valueSetName>
    </valueSet>
</CustomField>