force-app/main/default/objects/Sales_Presentation_Summary__c/fields/GAP_In_network_Postcard_Service__c.field-meta.xml
<CustomField>
    <fullName>GAP_In_network_Postcard_Service__c</fullName>
    <label>GAP: In-network Postcard Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Marketing_GAP</valueSetName>
    </valueSet>
</CustomField>