force-app/main/default/objects/Sales_Presentation_Summary__c/fields/GAP_Other_In_network_Referral_Program__c.field-meta.xml
<CustomField>
    <fullName>GAP_Other_In_network_Referral_Program__c</fullName>
    <label>GAP: Other In-network Referral Program</label>
    <length>255</length>
    <type>Text</type>
</CustomField>