force-app/main/default/objects/Sales_Presentation_Summary__c/fields/GAP_Other_Lead_Gen_Programs__c.field-meta.xml
<CustomField>
    <fullName>GAP_Other_Lead_Gen_Programs__c</fullName>
    <label>GAP: Other Lead Gen Programs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>