force-app/main/default/objects/Sales_Presentation_Summary__c/fields/GAP_Other_Property_Advertising__c.field-meta.xml
<CustomField>
    <fullName>GAP_Other_Property_Advertising__c</fullName>
    <label>GAP: Other Property Advertising</label>
    <length>255</length>
    <type>Text</type>
</CustomField>