force-app/main/default/objects/Sales_Presentation_Summary__c/fields/GAP_Social_Media__c.field-meta.xml
<CustomField>
    <fullName>GAP_Social_Media__c</fullName>
    <label>GAP: Social Media</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Marketing_GAP</valueSetName>
    </valueSet>
</CustomField>