force-app/main/default/objects/Sales_Presentation_Summary__c/fields/GAP_Targeted_Postcard_Mailing__c.field-meta.xml
<CustomField>
    <fullName>GAP_Targeted_Postcard_Mailing__c</fullName>
    <label>GAP: Targeted Postcard Mailing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Marketing_GAP</valueSetName>
    </valueSet>
</CustomField>