force-app/main/default/objects/Sales_Presentation_Summary__c/fields/gappdf1_Missed__c.field-meta.xml
<CustomField>
    <fullName>gappdf1_Missed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GAP Report Page 1_Missed</label>
    <type>Checkbox</type>
</CustomField>