force-app/main/default/objects/Sales_Presentation_Summary__c/fields/gappdf2_Missed__c.field-meta.xml
<CustomField>
    <fullName>gappdf2_Missed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GAP Report Page 2_Missed</label>
    <type>Checkbox</type>
</CustomField>