force-app/main/default/objects/Sales_Presentation_Summary__c/fields/Generate_Leads__c.field-meta.xml
<CustomField>
    <fullName>Generate_Leads__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate Leads</label>
    <type>Checkbox</type>
</CustomField>