force-app/main/default/objects/Sales_Presentation_Summary__c/fields/In_network_Gift_Program__c.field-meta.xml
<CustomField>
    <fullName>In_network_Gift_Program__c</fullName>
    <label>GAP: In-network Gift Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Marketing_GAP</valueSetName>
    </valueSet>
</CustomField>