force-app/main/default/objects/Sales_Presentation_Summary__c/fields/Increase_Transaction_Value__c.field-meta.xml
<CustomField>
    <fullName>Increase_Transaction_Value__c</fullName>
    <label>Increase Transaction Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>