force-app/main/default/objects/Sales_Presentation_Summary__c/fields/Is_Team_1__c.field-meta.xml
<CustomField>
    <fullName>Is_Team_1__c</fullName>
    <label>Is Team (1)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TRUE</fullName>
            </value>
            <value>
                <fullName>FALSE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>