force-app/main/default/objects/Sales_Presentation_Summary__c/fields/List_Source__c.field-meta.xml
<CustomField>
    <fullName>List_Source__c</fullName>
    <label>List Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>