force-app/main/default/objects/Sales_Presentation_Summary__c/fields/Marketing_Properties__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Properties__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing Properties</label>
    <type>Checkbox</type>
</CustomField>