force-app/main/default/objects/Sales_Presentation_Summary__c/fields/More_Referrals__c.field-meta.xml
<CustomField>
    <fullName>More_Referrals__c</fullName>
    <defaultValue>false</defaultValue>
    <label>More Referrals</label>
    <type>Checkbox</type>
</CustomField>