force-app/main/default/objects/Sales_Presentation_Summary__c/fields/My_Recommendation_close_duration__c.field-meta.xml
<CustomField>
    <fullName>My_Recommendation_close_duration__c</fullName>
    <label>My Recommendation (close)_duration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>