force-app/main/default/objects/Sales_Presentation_Summary__c/fields/newvideocert_Missed__c.field-meta.xml
<CustomField>
    <fullName>newvideocert_Missed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Cert Video_Missed</label>
    <type>Checkbox</type>
</CustomField>