force-app/main/default/objects/Sales_Presentation_Summary__c/fields/ob4RE_Missed__c.field-meta.xml
<CustomField>
    <fullName>ob4RE_Missed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Your Growth Objectives Calc_Missed</label>
    <type>Checkbox</type>
</CustomField>