force-app/main/default/objects/Sales_Presentation_Summary__c/fields/p10_duration__c.field-meta.xml
<CustomField>
    <fullName>p10_duration__c</fullName>
    <label>p10_duration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>