force-app/main/default/objects/Sales_Presentation_Summary__c/fields/p1_duration__c.field-meta.xml
<CustomField>
    <fullName>p1_duration__c</fullName>
    <description>aka p1_duration</description>
    <inlineHelpText>aka p1_duration</inlineHelpText>
    <label>Agenda_duration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>