force-app/main/default/objects/Sales_Presentation_Summary__c/fields/p8_Missed__c.field-meta.xml
<CustomField>
    <fullName>p8_Missed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclusive Group_Missed</label>
    <type>Checkbox</type>
</CustomField>