force-app/main/default/objects/Sales_Presentation_Summary__c/fields/p9_Missed__c.field-meta.xml
<CustomField>
    <fullName>p9_Missed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Announcement of Award Winners_Missed</label>
    <type>Checkbox</type>
</CustomField>