force-app/main/default/objects/Sales_Presentation_Summary__c/fields/Package_Digital_List_Item_Type_1__c.field-meta.xml
<CustomField>
    <fullName>Package_Digital_List_Item_Type_1__c</fullName>
    <label>Package Digital List Item Type (1)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>