force-app/main/default/objects/Sales_Presentation_Summary__c/fields/Package_Profile_List_Item_Type_1__c.field-meta.xml
<CustomField>
    <fullName>Package_Profile_List_Item_Type_1__c</fullName>
    <label>Package Profile List Item Type (1)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eighth</fullName>
            </value>
            <value>
                <fullName>Quarter</fullName>
            </value>
            <value>
                <fullName>Half</fullName>
            </value>
            <value>
                <fullName>Full</fullName>
            </value>
            <value>
                <fullName>2-page</fullName>
            </value>
            <value>
                <fullName>Full Showcase</fullName>
            </value>
            <value>
                <fullName>2-page Showcase</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>