force-app/main/default/objects/Sales_Presentation_Summary__c/fields/packagemarketingobjectives_Missed__c.field-meta.xml
<CustomField>
    <fullName>packagemarketingobjectives_Missed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Package Marketing Objectives_Missed</label>
    <type>Checkbox</type>
</CustomField>