force-app/main/default/objects/Sales_Presentation_Summary__c/fields/Pick_Two_Ala_Carte_Product_1__c.field-meta.xml
<CustomField>
    <fullName>Pick_Two_Ala_Carte_Product_1__c</fullName>
    <label>Pick Two Ala Carte Product (1)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Postcards</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>