force-app/main/default/objects/Sales_Presentation_Summary__c/fields/recommend_Missed__c.field-meta.xml
<CustomField>
    <fullName>recommend_Missed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>recommend_Missed</label>
    <type>Checkbox</type>
</CustomField>