force-app/main/default/objects/Sales_Presentation_Summary__c/fields/Recommendation_1__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_1__c</fullName>
    <label>Recommendation 1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>