force-app/main/default/objects/Sales_Presentation_Summary__c/fields/Recommendation_2__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_2__c</fullName>
    <label>Recommendation 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>