force-app/main/default/objects/Sales_Presentation_Summary__c/fields/Referral_Network_Client__c.field-meta.xml
<CustomField>
    <fullName>Referral_Network_Client__c</fullName>
    <label>Referral Network - Client</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>