force-app/main/default/objects/Sales_Presentation_Summary__c/fields/Referrals_Received_Last_12_Months__c.field-meta.xml
<CustomField>
    <fullName>Referrals_Received_Last_12_Months__c</fullName>
    <label>Referrals Received Last 12 Months?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>