force-app/main/default/objects/Sales_Presentation_Summary__c/fields/Referrals_Received_Professional__c.field-meta.xml
<CustomField>
    <fullName>Referrals_Received_Professional__c</fullName>
    <label>Referrals Received - Professional</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>