force-app/main/default/objects/Sales_Presentation_Summary__c/fields/Related_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Related_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Sales Presentation Summaries</relationshipLabel>
    <relationshipName>Sales_Presentation_Summaries</relationshipName>
    <type>Lookup</type>
</CustomField>