force-app/main/default/objects/Sales_Presentation_Summary__c/fields/Required_Pages_Missed__c.field-meta.xml
<CustomField>
    <fullName>Required_Pages_Missed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Required Pages Missed</label>
    <type>Checkbox</type>
</CustomField>