force-app/main/default/objects/Sales_Presentation_Summary__c/fields/Value_per_transactions__c.field-meta.xml
<CustomField>
    <fullName>Value_per_transactions__c</fullName>
    <label>Value per transactions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>