force-app/main/default/objects/Sales_Presentation_Summary__c/fields/Win_Presentations__c.field-meta.xml
<CustomField>
    <fullName>Win_Presentations__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Win Presentations</label>
    <type>Checkbox</type>
</CustomField>