force-app/main/default/objects/Sales_Presentation_Summary__c/fields/Your_Business_Objectives_Duration_s__c.field-meta.xml
<CustomField>
    <fullName>Your_Business_Objectives_Duration_s__c</fullName>
    <label>Your Business Objectives Duration (s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>