force-app/main/default/objects/Sales_Presentation_Summary__c/fields/Your_Growth_Objectives_Calculation_durat__c.field-meta.xml
<CustomField>
    <fullName>Your_Growth_Objectives_Calculation_durat__c</fullName>
    <label>Your Growth Objectives Calculation_durat</label>
    <type>TextArea</type>
</CustomField>